--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./resources/style.css" type="text/css">
   </head>
   <body>
+
+      <!-- Navigation -->
+
     <header class="desktop">
       <div class="logo-and-text">
         <img src="./resources/images/ic-logo.svg" alt="Logo">
@@ -29,6 +32,22 @@
         <li><a href="#"> <img src="resources/images/ic-login.svg" alt=""></a></li>
       </ul>
     </header>
+
+      <!-- Hero teaser -->
+    <div class="hero-container grey-background">
+      <div class="hero-teaser">
+        <img src="resources/images/banner.jpg" alt="Colmar academy students">
+
+      </div>
+      <div class="side-teasers">
+        <h1>Learn something new everyday</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="header-button">
+          <a href="#">Start here</a> 
+        </div>
+      </div>
+
+    </div>
 
   </body>
 </html>
