--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Colmar Academy</title>
     <link rel="stylesheet" href="./resources/reset.css" type="text/css">
     <link rel="stylesheet" href="./resources/style.css" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
 
@@ -43,7 +44,7 @@
         <h1>Learn something new everyday</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="header-button">
-          <a href="#">Start here</a> 
+          <a href="#">Start here</a>
         </div>
       </div>
 
