--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       <!-- Navigation -->
 
-    <header class="desktop">
+    <header class="no-mobile">
       <div class="logo-and-text">
         <img src="./resources/images/ic-logo.svg" alt="Logo">
         <span class="header-text"><span class="bold">COLMAR</span>ACADEMY</span>
@@ -40,7 +40,7 @@
         <img src="resources/images/banner.jpg" alt="Colmar academy students">
 
       </div>
-      <div class="side-teasers">
+      <div class="hero-text-section flex-column">
         <h1>Learn something new everyday</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="header-button">
@@ -49,6 +49,32 @@
       </div>
 
     </div>
+
+      <!-- Secondary teaser -->
+
+    <div class="hero-container">
+      <div class="hero-teaser no-mobile">
+        <img src="resources/images/information-main.jpg" alt="Student">
+        <h2>It doesn't hurt to keep practicing</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+      </div>
+
+      <div class="side-teasers flex-column">
+        <div class="side-teaser flex">
+          <div class="image-side-teaser flex">
+            <img src="resources/images/information-orientation.jpg" alt="">
+          </div>
+
+          <div class="side-teaser-text">
+            <h2>Orientation date</h2>
+            <span>Find which </span>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
 
   </body>
 </html>
