layout-issues-second-row-teasers-2

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <img src="resources/images/information-orientation.jpg" alt="">
           </div>
 
-          <div class="side-teaser-text">
+          <div class="side-teaser-text flex-column">
             <h2>Orientation date</h2>
             <span>Find which </span>
           </div>
