--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
       </div>
 
-      <div class="side-teasers flex-column">
-        <div class="side-teaser flex">
+      <div class="side-teasers">
+        <div class="side-teaser flex-column">
           <div class="image-side-teaser flex">
             <img src="resources/images/information-orientation.jpg" alt="">
           </div>
