layout-issues-second-row-teasers-flex_direction:column2

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       </div>
 
       <div class="side-teasers">
-        <div class="side-teaser flex-column">
-          <div class="image-side-teaser flex">
+        <div class="side-teaser flex">
+          <div class="image-side-teaser flex-column">
             <img src="resources/images/information-orientation.jpg" alt="">
           </div>
 
