--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
 
       </div>
       <div class="hero-text-section flex-column">
-        <h1>Learn something new everyday</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <div class="header-button">
-          <a href="#">Start here</a>
+        <div class="hero-text-container">
+            <h1>Learn something new everyday</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="header-button">
+              <a href="#">Start here</a>
+            </div>
         </div>
       </div>
 
@@ -59,13 +61,13 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
       </div>
 
-      <div class="side-teasers">
+      <div class="side-teasers flex">
         <div class="side-teaser flex">
-          <div class="image-side-teaser flex-column">
+          <div class="image-side-teaser flex">
             <img src="resources/images/information-orientation.jpg" alt="">
           </div>
 
-          <div class="side-teaser-text flex-column">
+          <div class="">
             <h2>Orientation date</h2>
             <span>Find which </span>
           </div>
