secondary-side-teasers-right-possition

--- a/index.html
+++ b/index.html
@@ -54,29 +54,59 @@
 
       <!-- Secondary teaser -->
 
-    <div class="hero-container">
-      <div class="hero-teaser no-mobile">
-        <img src="resources/images/information-main.jpg" alt="Student">
-        <h2>It doesn't hurt to keep practicing</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-      </div>
-
-      <div class="side-teasers flex">
-        <div class="side-teaser flex">
-          <div class="image-side-teaser flex">
-            <img src="resources/images/information-orientation.jpg" alt="">
+      <div class="hero-container">
+          <div class="hero-teaser no-mobile">
+              <img src="resources/images/information-main.jpg" alt="Student">
+              <h2>It doesn't hurt to keep practicing</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
           </div>
 
-          <div class="">
-            <h2>Orientation date</h2>
-            <span>Find which </span>
+          <div class="side-teasers">
+
+              <div class="flex">
+                  <div class="side-teaser flex">
+                      <div class="image-side-teaser">
+                          <img src="resources/images/information-orientation.jpg" alt="">
+                      </div>
+
+                      <div class="side-teaser-text">
+                          <h2>Orientation date</h2>
+                          <span>Tue 10/11 & Wed 10/12: 8am-3pm </span>
+                          <a href="#">Read more</a>
+                      </div>
+
+                  </div>
+              </div>
+              <div class="flex">
+                  <div class="side-teaser flex">
+                      <div class="image-side-teaser">
+                          <img src="resources/images/information-orientation.jpg" alt="">
+                      </div>
+
+                      <div class="side-teaser-text">
+                          <h2>Orientation date</h2>
+                          <span>Tue 10/11 & Wed 10/12: 8am-3pm </span>
+                          <a href="#">Read more</a>
+                      </div>
+
+                  </div>
+              </div>
+              <div class="flex">
+                  <div class="side-teaser flex">
+                      <div class="image-side-teaser">
+                          <img src="resources/images/information-orientation.jpg" alt="">
+                      </div>
+
+                      <div class="side-teaser-text">
+                          <h2>Orientation date</h2>
+                          <span>Tue 10/11 & Wed 10/12: 8am-3pm </span>
+                          <a href="#">Read more</a>
+                      </div>
+
+                  </div>
+              </div>
           </div>
-
-        </div>
       </div>
-
-    </div>
-
 
   </body>
 </html>
