secondary-teasers-finished:not-mobilized

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Colmar Academy</title>
     <link rel="stylesheet" href="./resources/reset.css" type="text/css">
     <link rel="stylesheet" href="./resources/style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,700" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -55,10 +56,11 @@
       <!-- Secondary teaser -->
 
       <div class="hero-container">
-          <div class="hero-teaser no-mobile">
+          <div class="hero-teaser no-mobile gray-boder-right">
               <img src="resources/images/information-main.jpg" alt="Student">
               <h2>It doesn't hurt to keep practicing</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+              <p class="text-cite">Emanuel, Sr Strategist at Hiring.com</p>
           </div>
 
           <div class="side-teasers">
@@ -70,7 +72,7 @@
                       </div>
 
                       <div class="side-teaser-text">
-                          <h2>Orientation date</h2>
+                          <h3>Orientation date</h3>
                           <span>Tue 10/11 & Wed 10/12: 8am-3pm </span>
                           <a href="#">Read more</a>
                       </div>
@@ -80,26 +82,26 @@
               <div class="flex">
                   <div class="side-teaser flex">
                       <div class="image-side-teaser">
-                          <img src="resources/images/information-orientation.jpg" alt="">
+                          <img src="resources/images/information-campus.jpg" alt="">
                       </div>
 
                       <div class="side-teaser-text">
-                          <h2>Orientation date</h2>
-                          <span>Tue 10/11 & Wed 10/12: 8am-3pm </span>
+                          <h3>Our campus</h3>
+                          <span>Find which campus is close by you</span>
                           <a href="#">Read more</a>
                       </div>
 
                   </div>
               </div>
               <div class="flex">
-                  <div class="side-teaser flex">
+                  <div class="side-teaser flex grey-background">
                       <div class="image-side-teaser">
-                          <img src="resources/images/information-orientation.jpg" alt="">
+                          <img src="resources/images/information-guest-lecture.jpg" alt="">
                       </div>
 
                       <div class="side-teaser-text">
-                          <h2>Orientation date</h2>
-                          <span>Tue 10/11 & Wed 10/12: 8am-3pm </span>
+                          <h3>Our guest lecture</h3>
+                          <span>Join a keynote with Oliver Slack about music in medical treatment</span>
                           <a href="#">Read more</a>
                       </div>
 
