second-row-teasers-mobilized

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
               <div class="flex">
                   <div class="side-teaser flex">
                       <div class="image-side-teaser">
-                          <img src="resources/images/information-orientation.jpg" alt="">
+                          <img class="mobile"src="resources/images/information-orientation.jpg" alt="">
+                          <img class="desktop"src="resources/images/information-orientation-mobile.jpg" alt="">
                       </div>
 
                       <div class="side-teaser-text">
@@ -82,7 +83,8 @@
               <div class="flex">
                   <div class="side-teaser flex">
                       <div class="image-side-teaser">
-                          <img src="resources/images/information-campus.jpg" alt="">
+                          <img class="mobile" src="resources/images/information-campus.jpg" alt="">
+                          <img class="desktop" src="resources/images/information-campus-mobile.jpg" alt="">
                       </div>
 
                       <div class="side-teaser-text">
@@ -96,7 +98,8 @@
               <div class="flex">
                   <div class="side-teaser flex grey-background">
                       <div class="image-side-teaser">
-                          <img src="resources/images/information-guest-lecture.jpg" alt="">
+                          <img class="mobile" src="resources/images/information-guest-lecture.jpg" alt="">
+                          <img class="desktop" src="resources/images/information-guest-lecture-mobile.jpg" alt="">
                       </div>
 
                       <div class="side-teaser-text">
