third teaser group initial set up: padding and adjustments still to finish

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     </div>
 
-      <!-- Secondary teaser -->
+      <!-- Secondary teasers -->
 
       <div class="hero-container">
           <div class="hero-teaser no-mobile gray-boder-right">
@@ -112,6 +112,72 @@
               </div>
           </div>
       </div>
+
+    <!-- 6 teasers group -->
+
+    <div class="full-width flex-column">
+      <div class="title">
+        <h2>Start learning</h2>
+      </div>
+      <div class="teaser-group flex-column">
+        <div class="teaser-row flex first">
+          <div class="single-teaser-group flex-column">
+            <div class="single-teaser-image">
+              <img src="resources/images/course-software.jpg" alt="">
+            </div>
+            <h3>Software engineering</h3>
+            <span class="second-title">Courses</span>
+            <span>Web Development, Mobile development, iOT, APIs</span>
+          </div>
+          <div class="single-teaser-group flex-column">
+            <div class="single-teaser-image">
+              <img src="resources/images/course-computer-art.jpg" alt="">
+            </div>
+            <h3>Computer art</h3>
+            <span class="second-title">Courses</span>
+            <span>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</span>
+          </div>
+          <div class="single-teaser-group flex-column">
+            <div class="single-teaser-image">
+              <img src="resources/images/course-design.jpg" alt="">
+            </div>
+            <h3>Design</h3>
+            <span class="second-title">Courses</span>
+            <span>User Experience Design, User Research, Visual Design</span>
+          </div>
+
+        </div>
+        <div class="teaser-row flex second">
+          <div class="single-teaser-group flex-column">
+            <div class="single-teaser-image">
+              <img src="resources/images/course-data.jpg" alt="">
+            </div>
+            <h3>Data</h3>
+            <span class="second-title">Courses</span>
+            <span>Data Science, Big Data, SQL, Data Visualization</span>
+          </div>
+          <div class="single-teaser-group flex-column">
+            <div class="single-teaser-image">
+              <img src="resources/images/course-business.jpg" alt="">
+            </div>
+            <h3>Business</h3>
+            <span class="second-title">Courses</span>
+            <span>Product Development, Business Development, Startup</span>
+          </div>
+          <div class="single-teaser-group flex-column">
+            <div class="single-teaser-image">
+              <img src="resources/images/course-marketing.jpg" alt="">
+            </div>
+            <h3>Marketing</h3>
+            <span class="second-title">Courses</span>
+            <span>Analytics, Content Marketing, Mobile Marketing</span>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
 
   </body>
 </html>
