video-row-set-up:footer and makeup still to do

--- a/index.html
+++ b/index.html
@@ -178,6 +178,49 @@
       </div>
 
     </div>
+    <div class="flex-column white-background">
+      <div class="title">
+        <h2>Thesis exhibit</h2>
+      </div>
+      <div class="hero-container">
+          <div class="hero-teaser">
+              <video width="100%" height="auto" controls>
+                <source src="https://www.dropbox.com/s/ap0p57vlfkgu6h1/thesis.mp4?raw=1" type="video/mp4">
+              </video>
+              <h3 class="desktop">Reimagine Urban</h3>
+              <p class="desktop">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+          </div>
 
+          <div class="side-teasers desktop">
+
+              <div class="flex">
+                  <div class="side-teaser flex grey-background no-border-bottom">
+                      <div class="image-side-teaser">
+                          <img class="desktop"src="resources/images/thesis-fisma.jpg" alt="">
+                      </div>
+
+                      <div class="side-teaser-text">
+                          <h3>Firma: Design and Prototype</h3>
+                          <span>Designer showcase of new prototype product</span>
+                      </div>
+
+                  </div>
+              </div>
+              <div class="flex">
+                  <div class="side-teaser flex no-border-bottom">
+                      <div class="image-side-teaser">
+                          <img class="desktop" src="resources/images/thesis-now-and-then.jpg" alt="">
+                      </div>
+
+                      <div class="side-teaser-text">
+                          <h3>Now and then</h3>
+                          <span>Research study about New York</span>
+                      </div>
+
+                  </div>
+              </div>
+          </div>
+      </div>
+    </div>
   </body>
 </html>
