--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Colmar Academy</title>
     <link rel="stylesheet" href="./resources/reset.css" type="text/css">
     <link rel="stylesheet" href="./resources/style.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Mallanna" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -180,14 +180,14 @@
     </div>
     <div class="flex-column white-background">
       <div class="title">
-        <h2>Thesis exhibit</h2>
+        <h2>Thesis exhibits</h2>
       </div>
       <div class="hero-container">
           <div class="hero-teaser">
               <video width="100%" height="auto" controls>
                 <source src="https://www.dropbox.com/s/ap0p57vlfkgu6h1/thesis.mp4?raw=1" type="video/mp4">
               </video>
-              <h3 class="desktop">Reimagine Urban</h3>
+              <h3 class="desktop specialpadding">Reimagine Urban</h3>
               <p class="desktop">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
           </div>
 
@@ -222,5 +222,14 @@
           </div>
       </div>
     </div>
+
+    <footer>
+      <div class="flex">
+        <span class="copyright">© 2016 Colmar Academy. All rights reserved</span>
+        <a href="#">Terms</a>
+        <a href="#">Privacy</a>
+      </div>
+
+    </footer>
   </body>
 </html>
